# tinkervault-42

./: .gitignore  CLAUDE.md  README.md  REPORT.md  index.html  mtw-public.key  package-lock.json  package.json
.claude/: settings.local.json
docs/technical/: BUGS.md  CHANGELOG.md  README.md  ROADMAP.md  SPEC.md  VISION.md
scripts/: build_release_package.ps1  build_windows.ps1  sign_manifest.ps1
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  errors.rs  geoastro.rs  lib.rs  main.rs  nautical57.rs  payload.rs  seedforge.rs  utils.rs  vault_format.rs
